<resources>
    <string name="app_name">MyProject2</string>
    <string name="op"> </string>
    <string name="tr"> _ </string>
    <string name="MAX">(7 erreurs max !)</string>
    <string name="email">Entrez votre email</string>
    <string name="mdp">Entrez votre mot de passe </string>
    <string name="jeu"> LE JEU DU PENDU </string>
    <string name="connection">  CONNECTION  </string>
    <string name="trouver"> Trouver le mot caché </string>
    <string name="entrer"> ENTRER </string>
    <string name="cree"> CREER UN COMPTE </string>
    <string name="deconecction"> DECONNECTION </string>
    <string name="actualiser"> ACTUALISER </string>
    <string name="suprimer"> SUPRIMER </string>
    <string name="test"> test </string>
    <string name="a"> A </string>
    <string name="b"> B </string>
    <string name="c"> C </string>
    <string name="d"> D </string>
    <string name="e"> E </string>
    <string name="f"> F </string>
    <string name="g"> G </string>
    <string name="h"> H </string>
    <string name="i"> I </string>
    <string name="j"> J </string>
    <string name="k"> K </string>
    <string name="l"> L </string>
    <string name="m"> M </string>
    <string name="n"> N </string>
    <string name="o"> O </string>
    <string name="p"> P </string>
    <string name="q"> Q </string>
    <string name="r"> R </string>
    <string name="s"> S </string>
    <string name="t"> T </string>
    <string name="u"> U </string>
    <string name="v"> V </string>
    <string name="w"> W </string>
    <string name="x"> X </string>
    <string name="y"> Y </string>
    <string name="z"> Z </string>

</resources>