<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jeu"
        android:textSize="24sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <EditText
        android:id="@+id/ETmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/ETmdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/mdp"
        android:inputType="textPassword"
        android:minHeight="48dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/nvcompte"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#2196F3"
            android:text="@string/cree" />

        <Button
            android:id="@+id/connection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#009688"
            android:text="@string/connection"
            android:textColor="#000000" />

        <Button
            android:id="@+id/deco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#009688"
            android:text="@string/deconecction"
            android:textColor="#000000" />

        <Button
            android:id="@+id/supp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#E91E63"
            android:text="@string/suprimer"
            android:textColor="#000000" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Space
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom|right"
        android:orientation="horizontal">

        <Button
            android:id="@+id/test"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/test"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#4CAF50"
            android:text="@string/actualiser"
            android:textColor="#263238" />
    </LinearLayout>

</LinearLayout>